--- a/webroot/estilos.css
+++ b/webroot/estilos.css
@@ -24,33 +24,25 @@ h1{
     border-radius: 50px;
     border: 2.5px solid var(--color6);
 }
-h2{
-    color: var(--color3);
-    text-align: center;
-}
-table{
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid black;
-}
-thead{
-    background-color: var(--color4);
-    color: var(--color5);
-    th{
-        border: 0px;
-        border: 1px solid black;
+main{
+    /*Página principal*/
+    #idiomas{
+        position: relative;
+        a{
+            transition: all 0.5s ease-in-out;
+        }
+        a:hover{
+            color: var(--color6);
+        }
+        button{
+            position: absolute;
+            right: 0;
+        }
     }
-}
-td{
-    border: 1px solid black;
-}
-.num{
-    border: 1px solid black;
-    padding: 5px;
-    color: var(--color2);
-}
-.eje, .mos{
-    padding: 5px;
+    #mapaAplicacion{
+        display: flex;
+        justify-self: center;
+    }
 }
 footer{
     background-color: white;
