--- a/webroot/estilos.css
+++ b/webroot/estilos.css
@@ -43,6 +43,19 @@ main{
         display: flex;
         justify-self: center;
     }
+    /*Pagina log in*/
+    #formulariologin{
+        h2{
+            text-align: center;
+        }
+        table{
+            margin: 5px auto;
+            border: 0.5px solid lightgrey;
+            border-radius: 5px;
+            background-color: #f0f0f5;
+            width: fit-content;
+        }
+    }
 }
 footer{
     background-color: white;
